[package]
name = "airtable-api"
description = "An API client for Airtable"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/airtable-api"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.1.5", git = "https://github.com/irevoire/reqwest-middleware", branch = "rustls" }
reqwest-retry = { version = "0.1.4", git = "https://github.com/irevoire/reqwest-middleware", branch = "rustls" }
reqwest-tracing = { version = "0.2.1", git = "https://github.com/irevoire/reqwest-middleware", branch = "rustls", features = ["opentelemetry_0_17"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
